fix wrong value for text-align in the style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -348,7 +348,6 @@ iframe {
 /* --------------------- join-us.html --------------------------------- */
 
 legend {
-    text-align: top left;
     padding: 6px 24px;
 }
 
